consertado bug scrollbar

--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,8 @@ a:hover {
 
 /* Esconder scrollbars */
 body {
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 /* ----------------------------------- */
@@ -97,13 +98,13 @@ body {
 
 @media (max-width: 1200px) {
     .tamanho-tela-mobile {
-        height: calc(90vh) !important;
+        min-height: calc(90vh) !important;
     }
 }
 
 @media (min-width: 1200px) {
     .tamanho-tela-desktop {
-        height: calc(100vh - 50px) !important;
+        min-height: calc(100vh - 50px) !important;
     }
 }
 
